# newscatcher-catchall-integrations

./: .gitignore  README.md
Claude/: SKILL.md
Claude/CatchAll-SKILL/: SKILL.md
Claude/CatchAll-SKILL/assets/: example-submit.json  example_pull_response.json
Claude/CatchAll-SKILL/references/: ENRICHMENT-TYPES.md  MONITOR-SCHEDULING.md  VALIDATORS.md  openapi-spec.json
Claude/Claude API/: README.md  claude_api_example.py  env_example
Claude/Claude Agent/: README.md  claude_agent_example.py  claude_agent_skill_example.py  env_example
MCP/: README.md
crew_ai/deep_search_agent/: README.md  env_example  pyproject.toml
crew_ai/deep_search_agent/src/deep_search_agent/: __init__.py  crews.py  flow.py  main.py
crew_ai/deep_search_agent/src/deep_search_agent/config/: __init__.py  agents.yaml  tasks.yaml
crew_ai/deep_search_agent/src/deep_search_agent/tools/: __init__.py  catchall_tool.py
crew_ai/risk_management_agent/: README.md  env_example  pyproject.toml
crew_ai/risk_management_agent/src/risk_managment_agent/: __init__.py  crew.py  main.py
crew_ai/risk_management_agent/src/risk_managment_agent/config/: agents.yaml  tasks.yaml
crew_ai/risk_management_agent/src/risk_managment_agent/tools/: __init__.py  newscatcher_risk_tool.py
